--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <h1>🔥 Who's On The Naughty List 🔥</h1>
+    <h1>😇 Who's On The Naughty List 😈</h1>
 
     <svg id="canvas">
         <text id="title" x="200" y="20" style="fill: white; font: italic 20px courier; 
